VRST25とWISS2025の研究成果を追加

--- a/src/pages/result.mdx
+++ b/src/pages/result.mdx
@@ -8,6 +8,21 @@ title: 研究成果
 
 ---
 
+## 2025年度
+
+### 国際会議
+
+- Yuya Oku, Hiroyuki Manabe, “[Multi-Wheel Input for Smart Glasses and XR Devices](https://doi.org/10.1145/3756884.3768414),” Proc. the 31th ACM Symposium on Virtual Reality Software and Technology (VRST '25), pp. 1-2, 2025. (demo paper)
+- Jin Okii, Hiroyuki Manabe, “[An Inner-Wrist Trackball Interaction Technique for Pointing and Gesture Input through Body-Rubbing](https://doi.org/10.1145/3756884.3768401),” Proc. the 31th ACM Symposium on Virtual Reality Software and Technology (VRST '25), pp. 1-2, 2025. (demo paper)
+
+### 国内会議
+
+- 櫻井 瑛一朗, 真鍋 宏幸, "[Flushner適用のための統合編集ツールによる総所要時間短縮と作業負荷低減](https://www.wiss.org/WISS2025Proceedings/data/demo/2-B04.pdf)," WISS2025予稿集, 2-B04, 2025.
+- 武田 和大, 真鍋 宏幸, "[ARグラスとスマホの回転を用いたインタラクション](https://www.wiss.org/WISS2025Proceedings/data/demo/3-A03.pdf)," WISS2025予稿集, 3-A03, 2025.
+- 石原 慎一, 真鍋 宏幸, "[物理的実体を知覚可能なインタラクティブボリュメトリックディスプレイ](https://www.wiss.org/WISS2025Proceedings/data/demo/3-C28.pdf)," WISS2025予稿集, 3-C28, 2025. <span style="color: red;">**対話発表賞（一般）**</span>
+
+---
+
 ## 2024年度
 
 ### ジャーナル
@@ -38,7 +53,7 @@ title: 研究成果
 ### 国際会議
 
 - Tatsuya Kawasaki, Hiroyuki Manabe, “[LensTouch: Touch Input on Lens Surfaces of Smart Glasses](https://doi.org/10.1145/3586182.3615792),” Adjunct Proc. Symp. User Interface Software and Technology (UIST ’23), Article No. 56, pp. 1-3, 2023. (demo paper)
-- Ryoto Nohara, Hironori Ishikawa, Hiroyuki Manabe, “[Positions of Wearable Keyboard in VR Environment](https://doi.org/10.1145/3607822.3618026),” Proc. 2023 ACM Symposium on Spatial User Interaction (SUI ’23), Article No. 38, pp. 1-3, 2023. (poster paper)SUI 2023 <span style="color: red;">**Best Poster Honorable Mention Award**</span>
+- Ryoto Nohara, Hironori Ishikawa, Hiroyuki Manabe, “[Positions of Wearable Keyboard in VR Environment](https://doi.org/10.1145/3607822.3618026),” Proc. 2023 ACM Symposium on Spatial User Interaction (SUI ’23), Article No. 38, pp. 1-3, 2023. (poster paper) SUI 2023 <span style="color: red;">**Best Poster Honorable Mention Award**</span>
 - Kouga Abe, Hironori Ishikawa, Hiroyuki Manabe, “[A Hybrid Method Using Gaze and Controller for Targeting Tiny Targets in VR While Lying down](https://doi.org/10.1007/978-3-031-36004-6_19),” HCI International 2023 Posters, pp. 139-146, 2023.
 - Eldiaz Salman Koeshandika, Hironori Ishikawa, Hiroyuki Manabe, “[Effects of Different Postures on User Experience in Virtual Reality](https://doi.org/10.1007/978-3-031-36004-6_30),” HCI International 2023 Posters, pp. 219-226, 2023.
 - Akari Kanei, Hiroyuki Manabe, “[Exergame to Promote Exercise Outside Physical Education Classes During a Pandemic](https://doi.org/10.1007/978-3-031-35998-9_36),” HCI International 2023 Posters, pp. 259-266, 2023.
