--- a/src/pages/result.mdx
+++ b/src/pages/result.mdx
@@ -17,6 +17,8 @@ title: 研究成果
 
 ### 国内会議
 
+- 八下田 尚吾, 真鍋 宏幸, "[利き腕を除いた身体部位に装着したIMUによるバドミントンショット分類](https://ipsj.ixsq.nii.ac.jp/records/2006452)," 情報処理学会研究会報告 HCI216, 2025.
+- 虞 朱強, 真鍋 宏幸, "[FDMプリンタで造形した基板上への導電転写箔を用いた電子回路印刷条件の検討](https://ipsj.ixsq.nii.ac.jp/records/2006473)," 情報処理学会研究会報告 HCI216, 2025.
 - 櫻井 瑛一朗, 真鍋 宏幸, "[Flushner適用のための統合編集ツールによる総所要時間短縮と作業負荷低減](https://www.wiss.org/WISS2025Proceedings/data/demo/2-B04.pdf)," WISS2025予稿集, 2-B04, 2025.
 - 武田 和大, 真鍋 宏幸, "[ARグラスとスマホの回転を用いたインタラクション](https://www.wiss.org/WISS2025Proceedings/data/demo/3-A03.pdf)," WISS2025予稿集, 3-A03, 2025.
 - 石原 慎一, 真鍋 宏幸, "[物理的実体を知覚可能なインタラクティブボリュメトリックディスプレイ](https://www.wiss.org/WISS2025Proceedings/data/demo/3-C28.pdf)," WISS2025予稿集, 3-C28, 2025. <span style="color: red;">**対話発表賞（一般）**</span>
